# solana-dapp

./: LICENSE  docker-compose.yml
.devcontainer/node-container/: devcontainer.json
.devcontainer/rust-container/: devcontainer.json
backend/: Cargo.toml  Dockerfile  build.rs  solana-test-validator.sh
backend/solana_program/: .gitignore  Cargo.toml  deploy.sh  solana-test-validator.sh
backend/solana_program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
backend/src/: app_state.rs  lib.rs  main.rs  server.rs  user.rs
backend/src/domain/: error.rs  mod.rs
backend/src/domain/logic/: user_mgr.rs
backend/src/domain/model/: mod.rs  user.rs
backend/src/domain/services/: mod.rs  solana_service.rs  user_service.rs
backend/src/domain/services/solana_service/: instruction.rs
backend/src/handlers/: mod.rs
backend/src/repo/: error.rs  mod.rs  user_repo.rs
backend/src/server/: app_state.rs  mod.rs
backend/src/server/handlers/: auth.rs  mod.rs  users.rs
backend/src/server/middleware/: auth.rs  host_extractor.rs  mod.rs
backend/src/utils/: mod.rs
backend/tests/: test_login.rs  test_registration.rs
backend/tests/common/: mod.rs
frontend/: Dockerfile  package-lock.json
solana_program/: Dockerfile
