[package]
name = "anti-loneliness-solana-dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-macros = "0.4.2"
chrono = "0.4.38"
num-bigint ={ version="0.4.6", features = ["rand"] }
rand = "0.8.5"
serde = {version="1.0.211", features = ["derive"] }
solana-client = "2.0.13"
solana-sdk = "2.0.13"
tokio = {version="1.40.0", features = ["rt", "rt-multi-thread", "tokio-macros", "net", "macros"]}
uuid ={ version="1.11.0", features=["v4", "fast-rng"]}
