[package]
name = "anti-loneliness-solana-dapp"
version = "0.1.0"
edition = "2021"

[lib]


[dependencies]
axum = "0.7.7"
axum-macros = "0.4.2"
axum-test = "16.3.0"
base64 = "0.22.1"
base64-serde = "0.8.0"
bincode = "1.3.3"
borsh = "1.5.1"
bytes = "1.8.0"
chrono = "0.4.38"
dotenv = "0.15.0"
ed25519-dalek = "2.1.1"
futures-util = "0.3.31"
http = "1.1.0"
http-body-util = "0.1.2"
jwt-simple = {version="0.12.10", default-features=false, features=["pure-rust"]}
num-bigint ={ version="0.4.6", features = ["rand"] }
num_enum = "0.7.3"
pin-project = "1.1.7"
pin-project-lite = "0.2.15"
rand = "0.8.5"
rstest = "0.23.0"
serde = {version="1.0.211", features = ["derive"] }
serde_json = "1.0.132"
solana-client = "2.0.13"
solana-sdk = "2.0.13"
thiserror = "1.0.66"
tokio = {version="1.40.0", features = ["rt", "rt-multi-thread", "tokio-macros", "net", "macros"]}
tokio-util = "0.7.12"
tower = "0.5.1"
tower-http = {version="0.6.1", features=["auth"]}
uuid ={ version="1.11.0", features=["v4", "fast-rng"]}
zeroize = { version = "1.7", default-features = false }

# https://github.com/solana-labs/solana/issues/26688#issuecomment-2411153994
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
