[package]
name = "anti-loneliness-solana-program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "2.0.13"
borsh = "1.5.1"
num-traits = "0.2.19"
num_enum = "0.7.3"

[dev-dependencies]
solana-program-test = "2.0.13"
solana-sdk = "2.0.13"
solana-client = "2.0.13"

[lib]
name = "solana_program"
crate-type = ["cdylib", "lib"]
